5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1595_2049.log
== TEST (2019-03-23 22:28:59) 
-- CODE:
a = 346 / 1
b = 1 / 1
c = 2.55 / 5.2
d = 9 % 4
print (a,b,c,d)
-- OUTPUT:
346.0 1.0 0.4903846153846153 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 22:29:08) 
-- CODE:
a = 346 / 1
b = 1 / 1
c = 2.55 / 5.2
d = 9 % 4
print (a,b,c,d)
-- EXECUTION TIME:
0.149103
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
346.0 1.0 0.4903846153846153 1
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
346.0 1.0 0.4903846153846153 1
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
346.0 1.0 0.4903846153846153 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:38:59) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
sa = a / 1
sb = b / 2
sc = c // 5.2
sd = d % 4

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:39:04) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
sa = a / 1
sb = b / 2
sc = c // 5.2
sd = d % 4

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:39:12) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:39:20) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:41:00) 
-- CODE:
a = int(input("valor de a :"))
b = int(input("valor de b :"))
c = int(input("valor de c :"))
d = int(input("valor de d :"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 22:42:23) 
-- CODE:
a = int(input("valor de a :"))
b = int(input("valor de b :"))
c = int(input("valor de c :"))
d = int(input("valor de d :"))
-- EXECUTION TIME:
0.129845
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2049/main.py", line 3, in <module>
    c = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:53:10) 
-- CODE:
x int(input("valor de x:"))
y int( input("valor de y:"))
a = x / y
b = y 
c = y / x
d =  x % Y
-- ERROR:
File "XXXX", line 1
    x int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:53:24) 
-- CODE:
x=nt(input("valor de x:"))
y=nt( input("valor de y:"))
a = x / y
b = y 
c = y / x
d =  x % Y
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=nt(input())
NameError: name 'nt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:54:53) 
-- CODE:
x=int(input("valor de x : "))
y= int(input("valor de y :"))
a = x / y
b = y 
c = y / x
d =  x % Y
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d =  x % Y
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:55:07) 
-- CODE:
x=int(input("valor de x : "))
y= int(input("valor de y :"))
a = x / y
b = y 
c = y / x
d = x % Y
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d = x % Y
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:56:07) 
-- CODE:
x=int(input("valor de x : "))
y= int(input("valor de y :"))
a = x / y
b = y 
c = y / x
d =( x % Y )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d =( x % Y )
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:04:03) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x / y
b = y
c = y / x 
d = x % y
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d =( x % Y )
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:04:58) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x / y
b = y
c = y / x 
d = x % y
print(a)
print(B)
print(c)
print(D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(B)
NameError: name 'B' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:05:24) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x / y
b = y
c = y / x 
d = x % y
print(a , b , c , d )
-- OUTPUT:
1.6 5 0.625 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:05:31) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x / y
b = y
c = y / x 
d = x % y
print(a , b , c , d )
-- EXECUTION TIME:
0.174011
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6 5 0.625 3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0 2 0.14285714285714285 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5 2 0.005763688760806916 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:06:00) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x / y
b = y
c = y // x
d = x % y
print(a , b , c , d )
-- OUTPUT:
1.6 5 0 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:06:07) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x / y
b = y
c = y // x
d = x % y
print(a , b , c , d )
-- EXECUTION TIME:
0.183669
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6 5 0 3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0 2 0 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5 2 0 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:07:30) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x 
b = y
c = y // x
d = x % y

-- OUTPUT:
1.6 5 0 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:07:37) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x 
b = y
c = y // x
d = x % y

-- EXECUTION TIME:
0.204951
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:

-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:08:29) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x 
b = y
c = y // x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
8
5
0
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:08:37) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x 
b = y
c = y // x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- EXECUTION TIME:
0.141052
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
0
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
0
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
0
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:08:49) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x 
b = y
c = y / x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
8
5
0.625
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:08:58) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x 
b = y
c = y / x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- EXECUTION TIME:
0.174312
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
0.625
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
0.14285714285714285
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
0.005763688760806916
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:09:21) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x / y
b = y
c = y //x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
1.6
5
0
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:09:27) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x / y
b = y
c = y //x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- EXECUTION TIME:
0.129442
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
5
0
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0
2
0
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5
2
0
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:09:34) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x / y
b = y
c = y // x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
1.6
5
0
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:09:44) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x / y
b = y
c = y // x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- EXECUTION TIME:
0.133594
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
5
0
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0
2
0
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5
2
0
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:10:12) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x / y
b = y
c = y // x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
1.6
5
0
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:10:31) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x / y
b = y
c = y // x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
1.6
5
0
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:10:50) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x / y
b = y
c = y // x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- EXECUTION TIME:
0.140497
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
5
0
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0
2
0
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5
2
0
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:12:14) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x 
b = y
c = y // x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
8
5
0
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:12:24) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x 
b = y
c = y // x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- EXECUTION TIME:
0.149344
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
0
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
0
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
0
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:12:58) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x 
b = y
c = y / x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
8
5
0.625
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:13:09) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x 
b = y
c = y / x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- EXECUTION TIME:
0.183266
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
0.625
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
0.14285714285714285
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
0.005763688760806916
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:13:13) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x 
b = y
c = y / x
d = x % y
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
8
5
0.625
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 23:14:06) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x 
b = y
c = x // y
d = x % y
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 23:14:14) 
-- CODE:
x=int(input("valor de x : "))
y=int(input("valor de y : "))
a = x 
b = y
c = x // y
d = x % y
print(a)
print(b)
print(c)
print(d)
-- EXECUTION TIME:
0.141236
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
